[package]
edition = "2018"
name = "rin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1", features = ["full"]}
log="0.4"

[dev-dependencies]
env_logger="0.9"


[[example]]
name = "hello"
path = "examples/hello.rs"
